--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %} Add a Contact {% endblock %}
+{% block title %} Edit a Contact {% endblock %}
 
 {% block header %}
-    <h1>Phone Book</h1>
+    <h1>Placeholder</h1>
 {% endblock %}
 
 {% block content %}
