--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
     <div class="row bg-primary py-5">
         <div class="col text-center text-white">
             {% block header %}
-                <h1>Hello World</h1>
+                <h1>Phonebook</h1>
             {% endblock %}
         </div>
     </div>
