--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,11 +20,11 @@
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h6 class="card-subtitle text-muted">Name: {{ phone.first_name }} {{ phone.last_name }}</h6>
-                                <h6 class="card-title">Phone: {{ phone.phone_number }}</h5>
+                                <h6 class="card-subtitle">Name: {{ phone.first_name }} {{ phone.last_name }}</h6>
+                                <h6 class="card-subtitle">Phone: {{ phone.phone_number }}</h6>
                                 <h6 class="card-subtitle">Address: {{ phone.address }}</h6>
                                     <a href="{{ url_for('edit_phone', phone_id=phone.id) }}" class="btn btn-success">Edit</a>
-                                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletePostModal-{{ phone.id }}">
+                                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletePhoneModal-{{ phone.id }}">
                                         Delete
                                     </button>
                             </div>
@@ -59,7 +59,7 @@
     </div>
     {% else %}
     <div class="row">
-        <H1>Welcome to the phonebook app LOGIN TO BEGIN!</H1>
+        <H1>Welcome to the phonebook app, login to see your address book!</H1>
 
     </div>
     {% endif %}
